--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <div id="navbar-left">
             <span>VALHALLA SM.</span>
-            <i class="fa-solid fa-bars fa-2x oculto" style="color: #fafafa; margin-right: 2rem;"></i>
+            <i class="fa-solid fa-bars fa-2x " id="menu" style="color: #fafafa; margin-right: 2rem;"></i>
         </div>
         <div id="navbar-right">
             <ul>
